feat(boot/jpa): 주요 응답 객체 및 컨트롤러 추가 - JPA 일부 필드 변경(dsl 컴파일러 산출물 쓸 수 있도록 nullable 가능하게 변경) - 멀티 모듈 의존성 오류 수정